tests/fixtures/invalid/bytes_bitand_none.py
# Cannot bitwise AND Bytes and None
x: bytes = b"hello" & None
